--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quiz App</title>
+  <title>Joke Generator</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <main class="quiz-container">
-    <h1>🧠 Web Quiz</h1>
-    <div id="quiz-box">
-      <p id="question"></p>
-      <div id="options"></div>
-      <p id="progress"></p>
-    </div>
-    <p id="result" class="hidden"></p>
-    <button id="nextBtn" onclick="nextQuestion()">Next</button>
+  <main class="joke-container">
+    <h1>😂 Random Joke Generator</h1>
+    <button onclick="getJoke()">Tell me a joke!</button>
+    <p id="jokeDisplay"></p>
   </main>
 
   <script src="script.js"></script>
